connections-clone/src/styles.css
body {
    font-family: Courier New, Courier, monospace;
    background-color: #1a1a1a;
    color: #f0f0f0;
}

.gameboardContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
}

.word-grid {
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
}

.found-grid {
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
}

@keyframes shake {
    0% {
        transform: translateX(0);
    }

    25% {
        transform: translateX(-5px);
    }

    50% {
        transform: translateX(5px);
    }

    75% {
        transform: translateX(-5px);
    }

    100% {
        transform: translateX(0);
    }
}

.word-item {
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #333333;
    border: 2px solid #444444;
    text-align: center;
    cursor: pointer;
    transition: background-color 0.3s, border-color 0.3s, color 0.3s;
    font-size: 1.2em;
    font-weight: bold;
    user-select: none;
    border-radius: 10px;
    color: #f0f0f0;
}

    .word-item:hover {
        background-color: #444444;
        cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🖕</text></svg>") 16 0,auto; /*!emojicursor.app*/
    }

    .word-item.selected {
        background-color: #f5a4c7;
        color: #f0f0f0;
        border-color: #f0f0f0;
    }

    .word-item.mistake {
        background-color: #e63946;
        color: #333333;
        border-color: #333333;
        animation: shake 0.5s;
    }

.category {
    margin-bottom: 10px;
    height: 100px;
    width: 100%;
    border: 2px solid #444444;
    text-align: center;
    cursor: pointer;
    transition: background-color 0.3s, border-color 0.3s;
    border-radius: 10px;
    color: #f0f0f0;
}

    .category.group0 {
        background-color: #ffb852;
        color: #1a1a1a;
    }

    .category.group1 {
        background-color: #bfb48f;
        color: #1a1a1a;
    }

    .category.group2 {
        background-color: #beb8e6;
        color: #1a1a1a;
    }

    .category.group3 {
        background-color: #008aa1;
        color: #1a1a1a;
    }

.selected-words {
    margin-top: 20px;
    display: flex;
    justify-content: center;
    gap: 10px;
}

.feedback {
    margin-top: 20px;
    font-size: 1.2em;
    color: #2a9d8f;
    text-align: center;
}

.submit {
    border-width: 2px;
    border-radius: 30px;
    padding: 20px 30px;
    font-size: 1em;
    cursor: pointer;
    border-color: #f0f0f0;
    background-color: transparent;
    color: #f0f0f0;
    transition: background-color 0.3s;
}

    .submit:hover {
        background-color: #444444;
        cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🖕</text></svg>") 16 0,auto; /*!emojicursor.app*/
    }

    .submit:disabled {
        background-color: #666666;
        color: #cccccc;
        cursor: default;
        opacity: .5;
    }

.ctitle {
    font-size: 25px;
    font-weight: bold;
    margin-bottom: 0px;
}

.controls {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.lives {
    margin-bottom: 20px;
    font-size: 25px;
}

.button-group {
    display: flex;
    gap: 20px;
    flex-direction: row;
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
}

.modalContent {
    background-color: #1a1a1a;
    padding: 20px;
    border-radius: 10px;
    text-align: center;
    color: #f0f0f0;
}

.startContainer {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.textContainer {
    margin-bottom:40px;
}

.welcome {
    font-size: 2em;
    margin-bottom: 20px;
}

.playButton {
    content: "Play";
    width:150px;
    border-width: 2px;
    border-radius: 30px;
    padding: 20px 30px;
    font-size: 1em;
    cursor: pointer;
    border-color: #f0f0f0;
    background-color: transparent;
    color: #f0f0f0;
    transition: background-color 0.3s;
}

    .playButton:hover {
        background-color: #444444;
        cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🖕</text></svg>") 16 0,auto; /*!emojicursor.app*/
    }

